--- a/index.html
+++ b/index.html
@@ -16,37 +16,37 @@
 
             <table>
                 <tr>
-                    <td><button id="btn_opra">AC</button></td>
-                    <td><button id="btn_opra">+/-</button></td>
-                    <td><button id="btn_opra">%</button></td>
-                    <td><button id="btn_opra">/</button></td>
+                    <td><button id="btn_opra_1" onclick="btn_opra_1" value="">AC</button></td>
+                    <td><button id="btn_opra_2" onclick="btn_opra_2" value="">+/-</button></td>
+                    <td><button id="btn_opra_3" onclick="btn_opra_3" value="">%</button></td>
+                    <td><button id="btn_opra_4" onclick="btn_opra_4" value="">/</button></td>
                 </tr>
 
                 <tr>
                     <td><button id="btn_num_7" onclick="btn_num_7()" value="7">7</button></td>
                     <td><button id="btn_num_8" onclick="btn_num_8()" value="8">8</button></td>
                     <td><button id="btn_num_9" onclick="btn_num_9()" value="9">9</button></td>
-                    <td><button id="btn_opra">x</button></td>
+                    <td><button id="btn_opra_5" onclick="btn_opra_5" value="">x</button></td>
                 </tr>
 
                 <tr>
                     <td><button id="btn_num_4" onclick="btn_num_4()" value="4">4</button></td>
                     <td><button id="btn_num_5" onclick="btn_num_5()" value="5">5</button></td>
                     <td><button id="btn_num_6" onclick="btn_num_6()" value="6">6</button></td>
-                    <td><button id="btn_opra">-</button></td>
+                    <td><button id="btn_opra_6" onclick="btn_opra_6" value="">-</button></td>
                 </tr>
 
                 <tr>
                     <td><button id="btn_num_1" onclick="btn_num_1()" value="1">1</button></td>
                     <td><button id="btn_num_2" onclick="btn_num_2()" value="2">2</button></td>
                     <td><button id="btn_num_3" onclick="btn_num_3()" value="3">3</button></td>
-                    <td><button id="btn_opra">+</button></td>
+                    <td><button id="btn_opra_7" onclick="btn_opra_7" value="">+</button></td>
                 </tr>
 
                 <tr>
                     <td colspan="2" id="btn_num_0" onclick="btn_num_0()" value="0"><button>0</button></td>
-                    <td><button id="btn_opra">.</button></td>
-                    <td><button id="btn_opra">=</button></td>
+                    <td><button id="btn_opra_8" onclick="btn_opra_8" value="">.</button></td>
+                    <td><button id="btn_opra_9" onclick="btn_opra_9" value="">=</button></td>
                 </tr>
 
 
