--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <td><button id="btn_num_7" onclick="btn_num_7()" value="7">7</button></td>
                     <td><button id="btn_num_8" onclick="btn_num_8()" value="8">8</button></td>
                     <td><button id="btn_num_9" onclick="btn_num_9()" value="9">9</button></td>
-                    <td><button id="btn_opra_5" onclick="btn_opra_5()" value="">&times;</button></td>
+                    <td><button id="btn_opra_5" onclick="btn_opra_5()" value="&times;">&times;</button></td>
                 </tr>
 
                 <tr>
@@ -50,7 +50,7 @@
                 <tr>
                     <td colspan="2"><button id="btn_num_0" onclick="btn_num_0()" value="0">0</button></td>
                     <td><button id="btn_opra_8" onclick="btn_opra_8()" value=".">.</button></td>
-                    <td><button id="btn_opra_9" onclick="btn_opra_9()" value="">=</button></td>
+                    <td><button id="btn_opra_9" onclick="result()">=</button></td>
                 </tr>
             
             </table>
