--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -50,7 +51,7 @@
                 <tr>
                     <td colspan="2"><button id="btn_num_0" onclick="btn_num_0()" value="0">0</button></td>
                     <td><button id="btn_opra_8" onclick="btn_opra_8()" value=".">.</button></td>
-                    <td><button id="btn_opra_9" onclick="result()">=</button></td>
+                    <td><button id="btn_opra_9" onclick="btn_equl ()">=</button></td>
                 </tr>
             
             </table>
